hphp/test/zend/bad/ext/posix/tests/posix_errno_error.php
<?php

echo "*** Test by calling method or function with more than expected arguments ***\n";

// test without any error
var_dump(posix_errno('bar'));

?>